--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -64,8 +64,8 @@
             <div class="row">
                 <!-- Linha 1 -->
 
-                <div class="col" onmouseover="selecionar()">
-
+                <div class="col">
+                    
                 </div>
                 <div class="col">
 
