--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -38,39 +38,35 @@
             </select>
         </div>
 
-        <div class="row justify-content-center my-5" id="radio">
-
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radio1"
-                    value="X">
-                <label class="form-check-label text-white" for="radio1">X</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radio2"
-                    value="O">
-                <label class="form-check-label text-white" for="radio2">O</label>
-            </div>
-
-        </div>
-
         <div class="row justify-content-center">
             <button class="btn btn-light" id="btnComecar">Começar</button>
         </div>
 
         <span id="erro"></span>
 
+        <h4 class="d-block mx-auto my-3">Placar</h4>
 
-        <section class="mx-5 my-5 w-50 mx-auto">
+        <div class="row mx-auto justify-content-center">
+
+            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de X: </p>
+            <input type="text" class="input-group-text mr-3" id="placarX" style="width: 40px;">
+            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de O: </p>
+            <input type="text" class="input-group-text mr-3" id="placarO" style="width: 40px;">
+
+        </div>
+
+        <section class="my-5 w-50 mx-auto">
+
             <div class="row">
                 <!-- Linha 1 -->
 
-                <div class="col">
-                    
-                </div>
-                <div class="col">
+                <div class="col" id="p1">
 
                 </div>
-                <div class="col">
+                <div class="col" id="p2">
+
+                </div>
+                <div class="col" id="p3">
 
                 </div>
 
@@ -78,13 +74,13 @@
             <div class="row">
                 <!-- Linha 2 -->
 
-                <div class="col">
+                <div class="col" id="p4">
 
                 </div>
-                <div class="col">
+                <div class="col" id="p5">
 
                 </div>
-                <div class="col">
+                <div class="col" id="p6">
 
                 </div>
 
@@ -92,19 +88,18 @@
             <div class="row">
                 <!-- Linha 3 -->
 
-                <div class="col">
+                <div class="col" id="p7">
 
                 </div>
-                <div class="col">
+                <div class="col" id="p8">
 
                 </div>
-                <div class="col">
+                <div class="col" id="p9">
 
                 </div>
 
             </div>
         </section>
-
 
     </div>
 
