--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -49,24 +49,32 @@
         <div class="row mx-auto justify-content-center">
 
             <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de X: </p>
-            <input type="text" class="input-group-text mr-3" id="placarX" style="width: 40px;">
+            <input type="text" class="input-group-text mr-3" id="placarx" style="width: 100px;">
             <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de O: </p>
-            <input type="text" class="input-group-text mr-3" id="placarO" style="width: 40px;">
+            <input type="text" class="input-group-text mr-3" id="placaro" style="width: 100px;">
 
         </div>
+
+        <div class="row justify-content-center my-3" id="VezDe">
+            <h5 style="color: #fff;" class="my-auto mx-2">Vez de: </h5>
+            <img src="" width="75px">
+        </div>
+
+        <span id="msg"></span>
+        <span id="btnlimpar" style="width: 100px;"></span>
 
         <section class="my-5 w-50 mx-auto">
 
             <div class="row">
                 <!-- Linha 1 -->
 
-                <div class="col" id="p1">
+                <div class="col" id="p1" jogar="">
 
                 </div>
-                <div class="col" id="p2">
+                <div class="col" id="p2" jogar="">
 
                 </div>
-                <div class="col" id="p3">
+                <div class="col" id="p3" jogar="">
 
                 </div>
 
@@ -74,13 +82,13 @@
             <div class="row">
                 <!-- Linha 2 -->
 
-                <div class="col" id="p4">
+                <div class="col" id="p4" jogar="">
 
                 </div>
-                <div class="col" id="p5">
+                <div class="col" id="p5" jogar="">
 
                 </div>
-                <div class="col" id="p6">
+                <div class="col" id="p6" jogar="">
 
                 </div>
 
@@ -88,13 +96,13 @@
             <div class="row">
                 <!-- Linha 3 -->
 
-                <div class="col" id="p7">
+                <div class="col" id="p7" jogar="">
 
                 </div>
-                <div class="col" id="p8">
+                <div class="col" id="p8" jogar="">
 
                 </div>
-                <div class="col" id="p9">
+                <div class="col" id="p9" jogar="">
 
                 </div>
 
