--- a/JogoDaVelha.html
+++ b/JogoDaVelha.html
@@ -44,19 +44,19 @@
 
         <span id="erro"></span>
 
-        <h4 class="d-block mx-auto my-3">Placar</h4>
+        <h4 class="d-block mx-auto my-3" id="titleplacar"></h4>
 
         <div class="row mx-auto justify-content-center">
 
-            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de X: </p>
-            <input type="text" class="input-group-text mr-3" id="placarx" style="width: 100px;">
-            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;">Vitórias de O: </p>
-            <input type="text" class="input-group-text mr-3" id="placaro" style="width: 100px;">
+            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;" id="txtX"></p>
+            <span id="placarx" class="alert my-auto mr-3"></span>
+            <p class="my-auto mr-2" style="color: #fff; font-weight: 500;" id="txtO"></p>
+            <span id="placaro" class="alert my-auto"></span>
 
         </div>
 
         <div class="row justify-content-center my-3" id="VezDe">
-            <h5 style="color: #fff;" class="my-auto mx-2">Vez de: </h5>
+            <h5 id="txtVez" class="my-auto mx-2"></h5>
             <img src="" width="75px">
         </div>
 
