comittao da forca

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="row mt-5 mx-auto justify-content-center">
 
-            <a href="#" style="text-decoration: none;">
+            <a href="forca.html" style="text-decoration: none;">
                 <div id="bot" class="col mx-5">
                     <h4 class="my-3">Jogo da Forca</h4>
                     <img src="/img/forca.png" alt="imgForca" width="150">
