--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -32,16 +32,16 @@
 
         <section class="row mt-5 mx-auto justify-content-center">
 
-            <a href="forca.html" style="text-decoration: none;">
+            <a href="forca/forca.html" style="text-decoration: none;">
                 <div id="bot" class="col mx-5">
                     <h4 class="my-3">Jogo da Forca</h4>
-                    <img src="/img/forca.png" alt="imgForca" width="150">
+                    <img src="img/forca.png" alt="imgForca" width="150">
                 </div>
             </a>
             <a href="JogoDaVelha.html" style="text-decoration: none;">
                 <div id="bot" class="col mx-5 px-0">
                     <h4 class="my-3">Joga da Velha</h4>
-                    <img src="/img/x.png" alt="imgJgVelha" width="250">
+                    <img src="img/x.png" alt="imgJgVelha" width="250">
                 </div>
             </a>
 
