--- a/forca/forca.html
+++ b/forca/forca.html
@@ -23,7 +23,7 @@
     <img id='hangmanPic' src="./images/0.jpg" alt="">
     
     <!--  MSG   -->
-    <p>Adivinhe a linguagem de programacao:</p>
+    <p>Adivinhe a palavra, dica - Linguagem de programação </p>
     <!--  NAO MOSTRA   -->
     <p id="localpalavra">Local da palavra secreta</p>
     <div id="keyboard"></div>
